--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,6 +26,9 @@ jobs:
       - name: Install dependencies
         run: npm install
 
+      - name: Delete .gitignore
+      - run: -rm .gitignore
+
       - name: Build
         run: npm run build
 
