--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,7 +27,7 @@ jobs:
         run: npm install
 
       - name: Delete .gitignore
-      - run: -rm .gitignore
+        run: rm .gitignore
 
       - name: Build
         run: npm run build
